--- a/index.html
+++ b/index.html
@@ -1,125 +1,73 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Filtro de Personas por Indicadores</title>
-  <style>
-    body { font-family: Arial, sans-serif; display: flex; }
-    .sidebar { width: 250px; background: #f0f0f0; padding: 10px; }
-    .tab { margin-bottom: 10px; }
-    .tab button { width: 100%; text-align: left; padding: 8px; cursor: pointer; }
-    .tab-content { display: none; padding: 10px; background: white; }
-    .tab-content label { display: block; margin: 5px 0; }
-    .main { flex-grow: 1; padding: 20px; }
-    .person { display: inline-block; margin: 10px; padding: 15px; background: #e3f2fd; border-radius: 10px; }
-    #network { width: 100%; height: 500px; border: 1px solid #ccc; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buscador de Personas por Campos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="sidebar">
-    <div class="tab">
-      <button onclick="toggleTab('especie')">Especie</button>
-      <div id="especie" class="tab-content">
-        <label><input type="checkbox" value="Ovina"> Ovina</label>
-        <label><input type="checkbox" value="Caprina"> Caprina</label>
-        <label><input type="checkbox" value="Vacuna"> Vacuna</label>
-        <label><input type="checkbox" value="Porcina"> Porcina</label>
-        <label><input type="checkbox" value="Avícola"> Avícola</label>
-        <label><input type="checkbox" value="cunícula"> cunícula</label>
-      </div>
+    <div class="container">
+        <div class="sidebar">
+            <h2>Filtros</h2>
+            <div class="filter-group">
+                <button class="accordion">Especie</button>
+                <div class="panel">
+                    <label><input type="checkbox" name="especie" value="Ovina"> Ovina</label>
+                    <label><input type="checkbox" name="especie" value="Caprina"> Caprina</label>
+                    <label><input type="checkbox" name="especie" value="Vacuna"> Vacuna</label>
+                    <label><input type="checkbox" name="especie" value="Porcina"> Porcina</label>
+                    <label><input type="checkbox" name="especie" value="Avícola"> Avícola</label>
+                    <label><input type="checkbox" name="especie" value="Cunícula"> Cunícula</label>
+                </div>
+            </div>
+
+            <div class="filter-group">
+                <button class="accordion">Dispositivos</button>
+                <div class="panel">
+                    <label><input type="checkbox" name="dispositivo" value="Drones"> Drones</label>
+                    <label><input type="checkbox" name="dispositivo" value="RFID"> RFID</label>
+                    <label><input type="checkbox" name="dispositivo" value="Collares"> Collares</label>
+                    <label><input type="checkbox" name="dispositivo" value="Cámaras de visión"> Cámaras de visión</label>
+                    <label><input type="checkbox" name="dispositivo" value="IA"> IA</label>
+                    <label><input type="checkbox" name="dispositivo" value="Alimentadores automáticos"> Alimentadores automáticos</label>
+                    <label><input type="checkbox" name="dispositivo" value="Básculas"> Básculas</label>
+                    <label><input type="checkbox" name="dispositivo" value="Sensores acústicos"> Sensores acústicos</label>
+                    <label><input type="checkbox" name="dispositivo" value="Sensores de movimiento"> Sensores de movimiento</label>
+                    <label><input type="checkbox" name="dispositivo" value="Vallados virtuales"> Vallados virtuales</label>
+                </div>
+            </div>
+
+            <div class="filter-group">
+                <button class="accordion">Estudio</button>
+                <div class="panel">
+                    <label><input type="checkbox" name="estudio" value="Comportamiento alimenticio"> Comportamiento alimenticio</label>
+                    <label><input type="checkbox" name="estudio" value="Comportamiento social"> Comportamiento social</label>
+                    <label><input type="checkbox" name="estudio" value="Manejo"> Manejo</label>
+                    <label><input type="checkbox" name="estudio" value="Nutrición"> Nutrición</label>
+                    <label><input type="checkbox" name="estudio" value="Salud"> Salud</label>
+                </div>
+            </div>
+
+            <div class="filter-group">
+                <button class="accordion">Proyectos</button>
+                <div class="panel">
+                    <label><input type="checkbox" name="proyecto" value="Project1"> Project1</label>
+                    <label><input type="checkbox" name="proyecto" value="Project2"> Project2</label>
+                    <label><input type="checkbox" name="proyecto" value="Project3"> Project3</label>
+                    <label><input type="checkbox" name="proyecto" value="Project4"> Project4</label>
+                </div>
+            </div>
+        </div>
+
+        <div class="main-content">
+            <h1>Personas encontradas</h1>
+            <div id="person-cloud" class="person-cloud">
+                </div>
+            <p class="no-results" id="no-results" style="display: none;">No se encontraron personas con los filtros seleccionados.</p>
+        </div>
     </div>
-    <div class="tab">
-      <button onclick="toggleTab('dispositivos')">Dispositivos</button>
-      <div id="dispositivos" class="tab-content">
-        <label><input type="checkbox" value="Drones"> Drones</label>
-        <label><input type="checkbox" value="RFID"> RFID</label>
-        <label><input type="checkbox" value="Collares"> Collares</label>
-        <label><input type="checkbox" value="Cámaras de visión"> Cámaras de visión</label>
-        <label><input type="checkbox" value="IA"> IA</label>
-        <label><input type="checkbox" value="Alimentadores automáticos"> Alimentadores automáticos</label>
-        <label><input type="checkbox" value="Básculas"> Básculas</label>
-        <label><input type="checkbox" value="Sensores acústicos"> Sensores acústicos</label>
-        <label><input type="checkbox" value="Sensores de movimiento"> Sensores de movimiento</label>
-        <label><input type="checkbox" value="Vallados virtuales"> Vallados virtuales</label>
-      </div>
-    </div>
-    <div class="tab">
-      <button onclick="toggleTab('estudio')">Estudio</button>
-      <div id="estudio" class="tab-content">
-        <label><input type="checkbox" value="Comportamiento alimenticio"> Comportamiento alimenticio</label>
-        <label><input type="checkbox" value="Comportamiento social"> Comportamiento social</label>
-        <label><input type="checkbox" value="Manejo"> Manejo</label>
-        <label><input type="checkbox" value="Nutrición"> Nutrición</label>
-        <label><input type="checkbox" value="Salud"> Salud</label>
-      </div>
-    </div>
-    <div class="tab">
-      <button onclick="toggleTab('proyectos')">Proyectos</button>
-      <div id="proyectos" class="tab-content">
-        <label><input type="checkbox" value="Project1"> Project1</label>
-        <label><input type="checkbox" value="Project2"> Project2</label>
-        <label><input type="checkbox" value="Project3"> Project3</label>
-        <label><input type="checkbox" value="Project4"> Project4</label>
-      </div>
-    </div>
-    <button onclick="filtrarPersonas()" style="margin-top: 20px; padding: 10px;">Filtrar</button>
-  </div>
-  <div class="main">
-    <h2>Personas filtradas:</h2>
-    <div id="resultados"></div>
-    <div id="network"></div>
-  </div>
 
-  <script>
-    // Datos de ejemplo (5 personas)
-    const personas = [
-      { nombre: "Ana", especie: ["Ovina", "Caprina"], dispositivos: ["Drones", "RFID"], estudio: ["Comportamiento social"], proyectos: ["Project1"] },
-      { nombre: "Luis", especie: ["Vacuna"], dispositivos: ["Collares", "IA"], estudio: ["Nutrición"], proyectos: ["Project2", "Project3"] },
-      { nombre: "Marta", especie: ["Porcina", "Avícola"], dispositivos: ["Básculas", "Sensores acústicos"], estudio: ["Salud"], proyectos: ["Project4"] },
-      { nombre: "Carlos", especie: ["cunícula"], dispositivos: ["Vallados virtuales"], estudio: ["Manejo"], proyectos: ["Project1", "Project4"] },
-      { nombre: "Elena", especie: ["Ovina", "Porcina"], dispositivos: ["Cámaras de visión"], estudio: ["Comportamiento alimenticio"], proyectos: ["Project3"] }
-    ];
-
-    function toggleTab(tabId) {
-      const tab = document.getElementById(tabId);
-      tab.style.display = tab.style.display === "block" ? "none" : "block";
-    }
-
-    function filtrarPersonas() {
-      const filtros = {
-        especie: getValoresSeleccionados("especie"),
-        dispositivos: getValoresSeleccionados("dispositivos"),
-        estudio: getValoresSeleccionados("estudio"),
-        proyectos: getValoresSeleccionados("proyectos")
-      };
-
-      const personasFiltradas = personas.filter(persona => 
-        cumpleFiltros(persona, filtros)
-      );
-
-      mostrarResultados(personasFiltradas);
-    }
-
-    function getValoresSeleccionados(tabId) {
-      const checks = document.querySelectorAll(`#${tabId} input:checked`);
-      return Array.from(checks).map(check => check.value);
-    }
-
-    function cumpleFiltros(persona, filtros) {
-      for (const campo in filtros) {
-        if (filtros[campo].length > 0 && !filtros[campo].some(valor => persona[campo].includes(valor))) {
-          return false;
-        }
-      }
-      return true;
-    }
-
-    function mostrarResultados(personas) {
-      const resultadosDiv = document.getElementById("resultados");
-      resultadosDiv.innerHTML = personas.length === 0 
-        ? "<p>No hay coincidencias.</p>" 
-        : personas.map(p => `<div class="person">${p.nombre}<br>${JSON.stringify(p)}</div>`).join("");
-    }
-  </script>
+    <script src="script.js"></script>
 </body>
 </html>
