--- a/index.html
+++ b/index.html
@@ -1,74 +1,302 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador de Personas por Campos</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Test de Personas - Visualización en red</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0; display: flex; height: 100vh; overflow: hidden;
+  }
+  #sidebar {
+    width: 280px;
+    background: #f0f0f0;
+    overflow-y: auto;
+    border-right: 2px solid #ccc;
+    padding: 10px;
+  }
+  .field {
+    margin-bottom: 20px;
+  }
+  .field > h3 {
+    margin: 0 0 5px 0;
+    padding: 8px;
+    cursor: pointer;
+    user-select: none;
+    font-size: 18px;
+  }
+  .field.especie > h3 { border-left: 6px solid #e74c3c; }      /* rojo */
+  .field.dispositivo > h3 { border-left: 6px solid #3498db; }  /* azul */
+  .field.estudio > h3 { border-left: 6px solid #2ecc71; }      /* verde */
+  .field.proyecto > h3 { border-left: 6px solid #f1c40f; }     /* amarillo */
+
+  .indicators {
+    padding-left: 15px;
+    display: none;
+  }
+  .indicators label {
+    display: block;
+    margin: 5px 0;
+    cursor: pointer;
+  }
+
+  #network {
+    flex: 1;
+  }
+</style>
+
+<!-- Librería vis-network -->
+<script type="text/javascript" src="https://unpkg.com/vis-network@9.1.2/dist/vis-network.min.js"></script>
+<link href="https://unpkg.com/vis-network@9.1.2/styles/vis-network.min.css" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
-    <div class="container">
-        <div class="sidebar">
-            <h2>Filtros</h2>
-            <div class="filter-group">
-                <button class="accordion">Especie</button>
-                <div class="panel">
-                    <label><input type="checkbox" name="especie" value="Ovina"> Ovina</label>
-                    <label><input type="checkbox" name="especie" value="Caprina"> Caprina</label>
-                    <label><input type="checkbox" name="especie" value="Vacuna"> Vacuna</label>
-                    <label><input type="checkbox" name="especie" value="Porcina"> Porcina</label>
-                    <label><input type="checkbox" name="especie" value="Avícola"> Avícola</label>
-                    <label><input type="checkbox" name="especie" value="Cunícula"> Cunícula</label>
-                </div>
-            </div>
 
-            <div class="filter-group">
-                <button class="accordion">Dispositivos</button>
-                <div class="panel">
-                    <label><input type="checkbox" name="dispositivo" value="Drones"> Drones</label>
-                    <label><input type="checkbox" name="dispositivo" value="RFID"> RFID</label>
-                    <label><input type="checkbox" name="dispositivo" value="Collares"> Collares</label>
-                    <label><input type="checkbox" name="dispositivo" value="Cámaras de visión"> Cámaras de visión</label>
-                    <label><input type="checkbox" name="dispositivo" value="IA"> IA</label>
-                    <label><input type="checkbox" name="dispositivo" value="Alimentadores automáticos"> Alimentadores automáticos</label>
-                    <label><input type="checkbox" name="dispositivo" value="Básculas"> Básculas</label>
-                    <label><input type="checkbox" name="dispositivo" value="Sensores acústicos"> Sensores acústicos</label>
-                    <label><input type="checkbox" name="dispositivo" value="Sensores de movimiento"> Sensores de movimiento</label>
-                    <label><input type="checkbox" name="dispositivo" value="Vallados virtuales"> Vallados virtuales</label>
-                </div>
-            </div>
-
-            <div class="filter-group">
-                <button class="accordion">Estudio</button>
-                <div class="panel">
-                    <label><input type="checkbox" name="estudio" value="Comportamiento alimenticio"> Comportamiento alimenticio</label>
-                    <label><input type="checkbox" name="estudio" value="Comportamiento social"> Comportamiento social</label>
-                    <label><input type="checkbox" name="estudio" value="Manejo"> Manejo</label>
-                    <label><input type="checkbox" name="estudio" value="Nutrición"> Nutrición</label>
-                    <label><input type="checkbox" name="estudio" value="Salud"> Salud</label>
-                </div>
-            </div>
-
-            <div class="filter-group">
-                <button class="accordion">Proyectos</button>
-                <div class="panel">
-                    <label><input type="checkbox" name="proyecto" value="Project1"> Project1</label>
-                    <label><input type="checkbox" name="proyecto" value="Project2"> Project2</label>
-                    <label><input type="checkbox" name="proyecto" value="Project3"> Project3</label>
-                    <label><input type="checkbox" name="proyecto" value="Project4"> Project4</label>
-                </div>
-            </div>
-        </div>
-
-        <div class="main-content">
-            <h1>Personas encontradas</h1>
-            <div id="mynetwork" class="network-container"></div>
-            <p class="no-results" id="no-results" style="display: none;">No se encontraron personas con los filtros seleccionados.</p>
-        </div>
+<div id="sidebar">
+  <div class="field especie">
+    <h3>Especie ▼</h3>
+    <div class="indicators">
+      <label><input type="checkbox" data-field="especie" value="Ovina" /> Ovina</label>
+      <label><input type="checkbox" data-field="especie" value="Caprina" /> Caprina</label>
+      <label><input type="checkbox" data-field="especie" value="Vacuna" /> Vacuna</label>
+      <label><input type="checkbox" data-field="especie" value="Porcina" /> Porcina</label>
+      <label><input type="checkbox" data-field="especie" value="Avícola" /> Avícola</label>
+      <label><input type="checkbox" data-field="especie" value="Cunícula" /> Cunícula</label>
     </div>
+  </div>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
-    <script src="script.js"></script>
+  <div class="field dispositivo">
+    <h3>Dispositivos ▼</h3>
+    <div class="indicators">
+      <label><input type="checkbox" data-field="dispositivo" value="Drones" /> Drones</label>
+      <label><input type="checkbox" data-field="dispositivo" value="RFID" /> RFID</label>
+      <label><input type="checkbox" data-field="dispositivo" value="Collares" /> Collares</label>
+      <label><input type="checkbox" data-field="dispositivo" value="Cámaras de visión" /> Cámaras de visión</label>
+      <label><input type="checkbox" data-field="dispositivo" value="IA" /> IA</label>
+      <label><input type="checkbox" data-field="dispositivo" value="Alimentadores automáticos" /> Alimentadores automáticos</label>
+      <label><input type="checkbox" data-field="dispositivo" value="Básculas" /> Básculas</label>
+      <label><input type="checkbox" data-field="dispositivo" value="Sensores acústicos" /> Sensores acústicos</label>
+      <label><input type="checkbox" data-field="dispositivo" value="Sensores de movimiento" /> Sensores de movimiento</label>
+      <label><input type="checkbox" data-field="dispositivo" value="Vallados virtuales" /> Vallados virtuales</label>
+    </div>
+  </div>
+
+  <div class="field estudio">
+    <h3>Estudio ▼</h3>
+    <div class="indicators">
+      <label><input type="checkbox" data-field="estudio" value="Comportamiento alimenticio" /> Comportamiento alimenticio</label>
+      <label><input type="checkbox" data-field="estudio" value="Comportamiento social" /> Comportamiento social</label>
+      <label><input type="checkbox" data-field="estudio" value="Manejo" /> Manejo</label>
+      <label><input type="checkbox" data-field="estudio" value="Nutrición" /> Nutrición</label>
+      <label><input type="checkbox" data-field="estudio" value="Salud" /> Salud</label>
+    </div>
+  </div>
+
+  <div class="field proyecto">
+    <h3>Proyecto ▼</h3>
+    <div class="indicators">
+      <label><input type="checkbox" data-field="proyecto" value="Project1" /> Project1</label>
+      <label><input type="checkbox" data-field="proyecto" value="Project2" /> Project2</label>
+      <label><input type="checkbox" data-field="proyecto" value="Project3" /> Project3</label>
+      <label><input type="checkbox" data-field="proyecto" value="Project4" /> Project4</label>
+    </div>
+  </div>
+</div>
+
+<div id="network"></div>
+
+<script>
+// Toggle desplegables
+document.querySelectorAll('#sidebar .field > h3').forEach(h3 => {
+  h3.addEventListener('click', () => {
+    const ind = h3.nextElementSibling;
+    if (ind.style.display === 'block') {
+      ind.style.display = 'none';
+      h3.textContent = h3.textContent.replace('▲','▼');
+    } else {
+      ind.style.display = 'block';
+      h3.textContent = h3.textContent.replace('▼','▲');
+    }
+  });
+});
+
+// Datos ejemplo: 5 personas y sus indicadores
+const personas = [
+  {
+    id: 1,
+    name: "Ana",
+    especie: ["Ovina", "Caprina"],
+    dispositivo: ["Drones", "RFID"],
+    estudio: ["Nutrición", "Salud"],
+    proyecto: ["Project1"]
+  },
+  {
+    id: 2,
+    name: "Luis",
+    especie: ["Vacuna"],
+    dispositivo: ["Collares", "IA", "Sensores acústicos"],
+    estudio: ["Comportamiento alimenticio", "Manejo"],
+    proyecto: ["Project2", "Project3"]
+  },
+  {
+    id: 3,
+    name: "María",
+    especie: ["Porcina", "Avícola"],
+    dispositivo: ["Cámaras de visión", "Básculas"],
+    estudio: ["Comportamiento social", "Salud"],
+    proyecto: ["Project1", "Project4"]
+  },
+  {
+    id: 4,
+    name: "Javier",
+    especie: ["Cunícula"],
+    dispositivo: ["Alimentadores automáticos", "Sensores de movimiento"],
+    estudio: ["Nutrición", "Comportamiento social"],
+    proyecto: ["Project2"]
+  },
+  {
+    id: 5,
+    name: "Elena",
+    especie: ["Ovina", "Vacuna"],
+    dispositivo: ["RFID", "Vallados virtuales"],
+    estudio: ["Manejo", "Salud"],
+    proyecto: ["Project3", "Project4"]
+  }
+];
+
+// Guardamos la red y contenedor
+const container = document.getElementById('network');
+let network = null;
+
+// Inicializamos red vacía
+function initNetwork(nodes, edges) {
+  const data = {nodes: new vis.DataSet(nodes), edges: new vis.DataSet(edges)};
+  const options = {
+    nodes: {
+      shape: 'dot',
+      size: 18,
+      font: {size: 14, color: '#000'},
+      borderWidth: 2,
+      color: {
+        border: '#666',
+        background: '#ddd'
+      }
+    },
+    edges: {
+      width: 2,
+      color: '#bbb',
+      smooth: {
+        type: 'continuous'
+      }
+    },
+    physics: {
+      stabilization: true,
+      barnesHut: {
+        gravitationalConstant: -3000,
+        springLength: 200
+      }
+    },
+    layout: {
+      improvedLayout: true
+    }
+  };
+  if(network) {
+    network.setData(data);
+  } else {
+    network = new vis.Network(container, data, options);
+  }
+}
+
+// Obtiene indicadores seleccionados en cada campo
+function getSelectedIndicators() {
+  const selected = {
+    especie: new Set(),
+    dispositivo: new Set(),
+    estudio: new Set(),
+    proyecto: new Set()
+  };
+  document.querySelectorAll('#sidebar input[type=checkbox]').forEach(chk => {
+    if (chk.checked) {
+      selected[chk.dataset.field].add(chk.value);
+    }
+  });
+  return selected;
+}
+
+// Devuelve true si persona tiene al menos un indicador en común con selección para algún campo
+function personaCoincide(persona, seleccion) {
+  for (const field in seleccion) {
+    if (seleccion[field].size === 0) continue; // si no hay selección en campo, no filtra por ahí
+    const inter = persona[field].filter(x => seleccion[field].has(x));
+    if (inter.length > 0) return true;
+  }
+  return false;
+}
+
+// Genera nodos y edges para la red basado en selección
+function generarRed() {
+  const seleccion = getSelectedIndicators();
+
+  // Si no hay ningún filtro seleccionado, mostramos todos
+  const filtrar = Object.values(seleccion).some(s => s.size > 0);
+
+  // Personas que cumplen al menos un indicador seleccionado
+  const personasFiltradas = filtrar
+    ? personas.filter(p => personaCoincide(p, seleccion))
+    : personas;
+
+  // Nodos: personas
+  const nodes = personasFiltradas.map(p => ({
+    id: p.id,
+    label: p.name,
+    color: '#87ceeb',
+    borderWidth: 3
+  }));
+
+  // Edges: conectamos personas que compartan al menos un indicador de la selección
+  const edges = [];
+  for (let i = 0; i < personasFiltradas.length; i++) {
+    for (let j = i + 1; j < personasFiltradas.length; j++) {
+      const p1 = personasFiltradas[i];
+      const p2 = personasFiltradas[j];
+
+      // Buscamos si comparten indicador entre los seleccionados
+      let tienenConexion = false;
+      for (const field in seleccion) {
+        // Si no se seleccionó nada en el campo, no lo usamos para conectar
+        if (seleccion[field].size === 0) continue;
+
+        // Intersección entre indicadores de p1 y p2 que además están en selección
+        const setP1 = new Set(p1[field].filter(x => seleccion[field].has(x)));
+        const setP2 = new Set(p2[field].filter(x => seleccion[field].has(x)));
+        for (const val of setP1) {
+          if (setP2.has(val)) {
+            tienenConexion = true;
+            break;
+          }
+        }
+        if (tienenConexion) break;
+      }
+      if (tienenConexion) {
+        edges.push({from: p1.id, to: p2.id});
+      }
+    }
+  }
+
+  initNetwork(nodes, edges);
+}
+
+// Actualizamos red al cambiar checkbox
+document.querySelectorAll('#sidebar input[type=checkbox]').forEach(chk => {
+  chk.addEventListener('change', () => {
+    generarRed();
+  });
+});
+
+// Mostrar todos inicialmente
+generarRed();
+</script>
+
 </body>
 </html>
